<resources>
    <string name="app_name">PopularMovies</string>

    <string name="sort_popularity_desc_text">Popularity</string>
    <string name="sort_highest_rating_desc_text">Highest Rating</string>
<<<<<<< HEAD
    <string name="favorite">Favorite</string>
    <string name="favorite_movie_alert">Please have at least one favorite movie.</string>
    <string name="network_unavailable">Network Unavailable</string>
=======
    <string name="sort_favorite">Favorites</string>
>>>>>>> e6cce583ad40b3ac8aa5321a49158327f94244a9

    <string name="textview_text_mainactivity">Movies</string>


    <string name="textview_text_movie_details_title">Movie Details</string>
    <string name="textview_text_original_title_movie_details">Movie Original Title</string>
    <string name="imageview_movie_detail_content">The poster image of the movie</string>
    <string name="textview_text_plot_synopsis_movie_details">Plot Synopsis</string>
    <string name="textview_text_user_rating_movie_details">User Rating</string>
    <string name="textview_text_release_date_movie_details">Release Date</string>

    <string name="textview_text_title_mainactivity">Movies</string>

    <string name="textview_text_row_list">Movie Trailer 1</string>
    <string name="imageview_description_row_list">Movie Trailer Play Button Image</string>

    <string name="favorite_star_button_description">The favorite star button</string>

    <string name="share_intent_chooser_text">Please select an app to share</string>
</resources>
