<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/sort_popularity_desc"
        android:orderInCategory="100"
        android:title="@string/sort_popularity_desc_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_highest_rating_desc"
        android:orderInCategory="100"
        android:title="@string/sort_highest_rating_desc_text"
<<<<<<< HEAD
        app:showAsAction="never" />
    <item
        android:id="@+id/show_favorite_movies"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="never" />
=======
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_favorite"
        android:orderInCategory="100"
        android:title="@string/sort_favorite"
        app:showAsAction="ifRoom" />
>>>>>>> e6cce583ad40b3ac8aa5321a49158327f94244a9
</menu>
