<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_original_title_movie_details"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/textview_text_original_title_movie_details"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageview_movie_poster_image"
            android:layout_width="180sp"
            android:layout_height="300sp"
            android:layout_below="@id/textview_original_title_movie_details"
            android:contentDescription="@string/imageview_movie_detail_content" />

        <TextView
            android:id="@+id/textview_plot_synopsis_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_movie_poster_image"
            android:layout_centerHorizontal="true"
            android:text="@string/textview_text_plot_synopsis_movie_details"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_below="@id/textview_original_title_movie_details"
            android:layout_toRightOf="@id/imageview_movie_poster_image"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textview_release_date_movie_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_text_release_date_movie_details"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingbar_movie_details"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:stepSize="0.1" />

            <CheckBox
                android:id="@+id/favorite_star_button"
                style="?android:attr/starStyle"
                android:layout_width="46dp"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/favorite_star_button_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_plot_synopsis_movie_details"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listview_movietrailers"
                android:layout_width="match_parent"
                android:layout_height="100sp"></ListView>

            <ListView
                android:id="@+id/listview_moviereviews"
                android:layout_width="match_parent"
                android:layout_height="100sp"></ListView>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>